# whisperx-utils

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  transcription_tool.ipynb
.devcontainer/: devcontainer.json
docker/: Dockerfile
whisperx_utils/: __init__.py  _audio_transcriber.py
