[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperx-utils"
version = "0.1.0"
authors = [
  { name="GracefulTabby", email="your.email@example.com" },
]
description = "A tool to transcribe audio files using whisperx"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GracefulTabby/whisperx-utils"
"Bug Tracker" = "https://github.com/GracefulTabby/whisperx-utils/issues"